--- a/wasm-game-of-life/www/index.html
+++ b/wasm-game-of-life/www/index.html
@@ -25,6 +25,7 @@
     <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <button id="play-pause"></button>
+    <button id="play-once">once</button>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
